--- a/src/app/shell/shell.component.scss
+++ b/src/app/shell/shell.component.scss
@@ -98,7 +98,7 @@ app-navbar {
   }
 }
 
-@media only screen and (max-width: $screen-sm) {
+@media only screen and (max-width: $page-width) {
   .sidebar-container {
     grid-template-areas: "navbar sidebar-additional";
     grid-template-columns: auto auto;
